Feat: add jwt auth
