# docs/swagger.json
@@ -284,17 +284,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "user"
                 ],
                 "summary": "Register a new user",
                 "parameters": [
                     {
-                        "description": "Register User Request",
-                        "name": "register",
+                        "description": "User data",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.RegisterUserRequest"
+                            "$ref": "#/definitions/models.RegisterRequest"
                         }
                     }
                 ],
@@ -330,17 +330,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "user"
                 ],
                 "summary": "Login a user",
                 "parameters": [
                     {
-                        "description": "Login User Request",
-                        "name": "login",
+                        "description": "User data",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.LoginUserRequest"
+                            "$ref": "#/definitions/models.LoginRequest"
                         }
                     }
                 ],
@@ -365,22 +365,70 @@
                     }
                 }
             }
+        },
+        "/users/refresh": {
+            "post": {
+                "description": "Refresh token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Refresh token",
+                "parameters": [
+                    {
+                        "description": "Refresh token data",
+                        "name": "token",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.RefreshTokenRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseSuccess-models_TokenResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "models.LoginUserRequest": {
+        "models.LoginRequest": {
             "type": "object",
             "required": [
-                "id",
+                "email",
                 "password"
             ],
             "properties": {
-                "id": {
-                    "type": "string"
+                "email": {
+                    "type": "string",
+                    "maxLength": 255
                 },
                 "password": {
                     "type": "string",
-                    "maxLength": 100
+                    "maxLength": 255,
+                    "minLength": 8
                 }
             }
         },
@@ -409,25 +457,40 @@
                 }
             }
         },
-        "models.RegisterUserRequest": {
+        "models.RefreshTokenRequest": {
             "type": "object",
             "required": [
-                "id",
-                "name",
-                "password"
+                "refresh_token"
             ],
             "properties": {
-                "id": {
+                "refresh_token": {
                     "type": "string"
-                },
-                "name": {
+                }
+            }
+        },
+        "models.RegisterRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password",
+                "role"
+            ],
+            "properties": {
+                "email": {
                     "type": "string",
-                    "minLength": 5
+                    "maxLength": 255
                 },
                 "password": {
                     "type": "string",
-                    "maxLength": 100,
+                    "maxLength": 255,
                     "minLength": 8
+                },
+                "role": {
+                    "type": "string",
+                    "enum": [
+                        "admin",
+                        "user"
+                    ]
                 }
             }
         },
@@ -461,6 +524,20 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/models.TodoResponse"
+                },
+                "message": {
+                    "$ref": "#/definitions/models.Message"
+                },
+                "paging": {
+                    "$ref": "#/definitions/models.PageMetadata"
+                }
+            }
+        },
+        "models.ResponseSuccess-models_TokenResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/models.TokenResponse"
                 },
                 "message": {
                     "$ref": "#/definitions/models.Message"
@@ -528,20 +605,34 @@
                 }
             }
         },
+        "models.TokenResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "models.UserResponse": {
             "type": "object",
             "properties": {
                 "created_at": {
                     "type": "string"
                 },
+                "email": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
-                "name": {
+                "role": {
                     "type": "string"
                 },
-                "token": {
-                    "type": "string"
+                "status": {
+                    "type": "integer"
                 },
                 "updated_at": {
                     "type": "string"
