# internal/models/converter/user_converter.go
@@ -1,21 +1,24 @@
 package converter
 
 import (
-	"github.com/savioruz/mikti-task/tree/week-3/internal/entities"
-	"github.com/savioruz/mikti-task/tree/week-3/internal/models"
+	"github.com/savioruz/mikti-task/tree/week-4/internal/entities"
+	"github.com/savioruz/mikti-task/tree/week-4/internal/models"
 )
 
 func UserToResponse(user *entities.User) *models.UserResponse {
 	return &models.UserResponse{
 		ID:        user.ID,
-		Name:      user.Name,
+		Email:     user.Email,
+		Role:      user.Role,
+		Status:    user.Status,
 		CreatedAt: user.CreatedAt.String(),
 		UpdatedAt: user.UpdatedAt.String(),
 	}
 }
 
-func UserToTokenResponse(user *entities.User) *models.UserResponse {
-	return &models.UserResponse{
-		Token: user.Token,
+func LoginToTokenResponse(accessToken, refreshToken string) *models.TokenResponse {
+	return &models.TokenResponse{
+		AccessToken:  accessToken,
+		RefreshToken: refreshToken,
 	}
 }
